add logging translation

--- a/apps/webservice/src/assets/translations/fr/errors.json
+++ b/apps/webservice/src/assets/translations/fr/errors.json
@@ -1,3 +1,4 @@
 {
-  "StripePublishableKeyNotFoundError": "Clé publiable Stripe non trouvée"
+  "StripePublishableKeyNotFoundError": "Clé publiable Stripe non trouvée",
+  "Unkown": "Erreur inconnue"
 }
