begin to implement error pages

--- a/apps/webservice/src/assets/translations/en/errors.json
+++ b/apps/webservice/src/assets/translations/en/errors.json
@@ -7,5 +7,6 @@
   "UnabilityToCreateUserError": "Unability to create a user",
   "UnabilityToSendEmailError": "Unability to send an email",
   "UnkownPlanError": "Unknown plan",
-  "Unkown": "Unknown error"
+  "Unkown": "Unknown error",
+  "Unauthorized": "Unauthorized action"
 }
